--- a/box.css
+++ b/box.css
@@ -1,4 +1,12 @@
 .box1 {
   width: 300px;
   height: 300px;
+  background-color: pink;
+  margin-top: 40px;
+  padding: 30px;
 }
+.box2 {
+  width: 100px;
+  height: 100px;
+  background-color: blue;
+  border:5px solid yellow;
